--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
     <hr/>
 
     <h2>Other:</h2>
-    <a href="./Myhobbies.html">My Hobbies</a>
+    <a href="./MyHobbies.html">My Hobbies</a>
     <br/>
     <a href="./Contact me.html">Contact Me</a>
+    <footer>
+        <p>©️2023 Apiwe Fuzile</p>
+        <p>®️All Rights Reserved</p>
+    </footer>
 </body>
 </html>
