--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Apiwe Fuzile</h1>
 
-    <img src="./Kratos.jpg" alt="Profile image of Apiwe" height="100">
+    <img src="./Apiwe picture.jpeg" alt="Profile image of Apiwe" height="100">
 
     <hr/>
 
